--- a/Video BG/index.html
+++ b/Video BG/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <video src=""></video>
+    <section class="hero">
+        <video autoplay loop muted play-inline class="back-video">
+        <source src="./video.mp4">
+        </video>
+    
+        <section class="content">
+            <h1>Journey</h1>
+            <a href="">Explore</a>
+        </section>
     </section>
+    
 </body>
 </html>
